--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
-    "@types/node": "^18.11.10"
+    "@babel/preset-typescript": "^7.18.6",
+    "@jest/globals": "^29.3.1",
+    "@types/node": "^18.11.10",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3"
   },
   "dependencies": {
     "buckets-js": "^1.98.2",
