--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@jest/globals": "^29.3.1",
@@ -11,6 +10,7 @@
     "buckets-js": "^1.98.2",
     "node": "^19.2.0",
     "ts-node": "^10.9.1",
+    "tsx": "^4.6.2",
     "typescript": "^5.3.2"
   }
 }
