--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@jest/globals": "^29.3.1",
     "@types/node": "^18.11.10",
-    "jest": "^29.3.1",
+    "jest": "^29.7.0",
     "ts-jest": "^29.0.3"
   },
   "dependencies": {
